--- a/render.yaml
+++ b/render.yaml
@@ -1,23 +1,31 @@
 services:
   - type: web
-    name: long-quan-business-management
+    name: webapp
     env: node
-    plan: free
-    buildCommand: npm install && npm run build
+    plan: starter
+    buildCommand: npm ci && npm run build
     startCommand: npm start
-    healthCheckPath: /api/health
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 5000
       - key: DATABASE_URL
         fromDatabase:
-          name: long-quan-db
+          name: webapp-db
           property: connectionString
-      - key: PORT
-        value: 10000
+      - key: GOOGLE_CLOUD_PROJECT
+        sync: false
+      - key: GOOGLE_CLOUD_STORAGE_BUCKET
+        sync: false
+      - key: GOOGLE_APPLICATION_CREDENTIALS
+        sync: false
+    healthCheckPath: /api/health
+    autoDeploy: true
 
 databases:
-  - name: long-quan-db
-    databaseName: long_quan_business
-    user: long_quan_user
-    plan: free
+  - name: webapp-db
+    databaseName: webapp
+    user: webapp
+    plan: starter
+    ipAllowList: []
