--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push",
-    "deploy": "chmod +x deploy-render.sh && ./deploy-render.sh",
-    "render:deploy": "git add . && git commit -m 'Deploy to Render' && git push origin main"
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@google-cloud/storage": "^7.16.0",
