--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     buildCommand: npm install && npm run build
-    startCommand: npm start
+    startCommand: node migrate-production.js && npm start
     healthCheckPath: /api/health
     envVars:
       - key: NODE_ENV
